[package]
name = "rtsort"
version = "0.3.0"
edition = "2024"
description = "A real-time `sort` with a live terminal preview."
license = "MIT"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"

[dev-dependencies]
assert_cmd = "=2.2.0"
predicates = "=3.1.4"
